@@ -14,6 +14,7 @@
 * Removed the delay outside of the dspu::Limiter module. The caller should implement
   it's own delay.
 * Fixed ALR distortion issue for the dspu::Limiter module.
+* Added dspu::SurgeProtector module.
 * Updated build scripts.
 
 === 1.0.11 ===
